# alacritty

./: CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  prompt.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
alacritty/: Cargo.toml  build.rs
alacritty/res/wgpu/: rect.wgsl
alacritty/src/: cli.rs  clipboard.rs  config.rs  daemon.rs  display.rs  event.rs  ipc.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
alacritty/src/config/: ui_config.rs
alacritty/src/display/: cursor.rs  damage.rs  hint.rs  mod.rs  window.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/renderer/: mod.rs  rects.rs  text.rs  wgpu_backend.rs
alacritty/src/renderer/text/: glyph_cache.rs  mod.rs
alacritty/src/renderer/wgpu_backend/: atlas.rs  glyph_cache.rs  mod.rs
alacritty_config/: Cargo.toml
alacritty_config_derive/: Cargo.toml
alacritty_config_derive/src/: lib.rs
alacritty_config_derive/src/config_deserialize/: de_struct.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: event_loop.rs  lib.rs  selection.rs
alacritty_terminal/src/term/: mod.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs  windows.rs
alacritty_terminal/src/tty/windows/: blocking.rs  child.rs
res/wgpu/: text.wgsl
src/: cli.rs  clipboard.rs  config.rs  config_compat.rs  daemon.rs  display.rs  event.rs  input.rs  ipc.rs  main.rs  migrate.rs  panic.rs  terminal.rs  window_context.rs
src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  window.rs
src/input/: keyboard.rs
src/renderer/: rects.rs  wgpu_backend.rs
src/renderer/text/: gles2.rs  glsl3.rs
src/renderer/wgpu_backend/: atlas.rs  glyph_cache.rs
src/terminal/: event.rs  event_loop.rs  grid.rs  index.rs  selection.rs  sync.rs  term.rs  tty.rs  vi_mode.rs
src/terminal/grid/: resize.rs  row.rs  storage.rs
src/terminal/term/: cell.rs  search.rs
src/terminal/tty/: unix.rs  windows.rs
src/terminal/tty/windows/: blocking.rs  child.rs  conpty.rs
wgsl/: rect.wgsl  text.wgsl
