[package]
name = "alacritty"
version = "0.18.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/alacritty/alacritty"

[dependencies]
base64 = "0"
bitflags = { version = "2", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }

crossfont = "0"
dirs = "6"
log = { version = "0", features = ["serde", "std"] }
polling = "3"
pollster = "0"
regex-automata = "0"
rustc-hash = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tempfile = "3"
toml = "1"
toml_edit = "0"
unicode-width = "0"
vte = { version = "0", default-features = false, features = [
  "ansi",
  "serde",
  "std"
] }

[dev-dependencies]
clap_complete = "4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = [
  "event",
  "fs",
  "io_uring",
  "process",
  "pty",
  "stdio",
  "termios",
] }
signal-hook = "0"
wgpu = { version = "29", default-features = false, features = [
  "std",
  "vulkan",
  "wgsl",
] }
winit = { version = "0", default-features = false, features = [
  "rwh_06",
  "serde",
  "wayland",
  "x11",
] }

[target.'cfg(windows)'.dependencies]
wgpu = { version = "29", default-features = false, features = [
  "dx12",
  "std",
  "wgsl",
] }
windows-sys = { version = "0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
] }
winit = { version = "0", default-features = false, features = [
  "rwh_06",
  "serde"
] }
