[package]
name = "alacritty"
version = "0.17.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "A fast, cross-platform, GPU terminal emulator"
readme = "README.md"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition.workspace = true
rust-version.workspace = true

[dependencies.alacritty_terminal]
path = "../alacritty_terminal"
version = "0.25.2-dev"

[dependencies.alacritty_config_derive]
path = "../alacritty_config_derive"
version = "0.2.6-dev"

[dependencies.alacritty_config]
path = "../alacritty_config"
version = "0.2.4-dev"

[dependencies]
ahash = { version = "0.8.6", features = ["no-rng"] }
bitflags = "2.2.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
crossfont = "0.8.1"
dirs = "6.0.0"
home = "0.5.5"
log = { version = "0.4", features = ["std", "serde"] }
notify = "8.0.0"
parking_lot = "0.12.0"
pollster = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
tempfile = "3.12.0"
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0.2.0"
wgpu = { version = "27.0.1", default-features = false, features = ["std", "dx12", "wgsl"] }
winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[dev-dependencies]
clap_complete = "4.2.3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
default = []
x11 = []
wayland = []
nightly = []
