[package]
name = "alacritty"
version = "0.18.0"
edition.workspace = true
description = "A fast, cross-platform, GPU terminal emulator"
readme = "README.md"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
license = "Apache-2.0"

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
copypasta = { version = "0", default-features = false }
crossfont = "0"
dirs = "6"
home = "0"
log = { version = "0.4", features = ["serde", "std"] }
notify = "8"
parking_lot = "0"
pollster = "0"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
tempfile = "3"
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0"

[dependencies.alacritty_config]
path = "../alacritty_config"

[dependencies.alacritty_config_derive]
path = "../alacritty_config_derive"

[dependencies.alacritty_terminal]
path = "../alacritty_terminal"

[dev-dependencies]
clap_complete = "4"

[target.'cfg(unix)'.dependencies]
wgpu = { version = "29", default-features = false, features = [
  "parking_lot",
  "std",
  "vulkan",
  "wgsl",
] }

[target.'cfg(windows)'.dependencies]
wgpu = { version = "29", default-features = false, features = [
  "dx12",
  "parking_lot",
  "std",
  "wgsl",
] }

windows-sys = { version = "0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
winit = { version = "0", default-features = false, features = [
  "rwh_06",
  "serde"
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[features]
default = []
nightly = []
wayland = []
x11 = []
