[package]
name = "alacritty_config_derive"
version = "0.3.0"
edition.workspace = true
description = "Failure resistant deserialization derive"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
  "derive",
  "parsing",
  "printing",
  "proc-macro"
] }

[dev-dependencies]
log = "0"
serde = { version = "1", features = ["derive"] }
toml.workspace = true

[dev-dependencies.alacritty_config]
path = "../alacritty_config"
